@@ -58,24 +58,20 @@ public:
 
   /// Encode the given data, including the TypeCode, into an octet
   /// sequence.
-  virtual CORBA::OctetSeq * encode (const CORBA::Any & data
-                                    );
+  virtual CORBA::OctetSeq * encode (const CORBA::Any & data);
 
   /// Extract the TypeCode and the value from the octet sequence and
   /// place them into an Any.
-  virtual CORBA::Any * decode (const CORBA::OctetSeq & data
-                               );
+  virtual CORBA::Any * decode (const CORBA::OctetSeq & data);
 
   /// Encode the given data, excluding the TypeCode, into an octet
   /// sequence.
-  virtual CORBA::OctetSeq * encode_value (const CORBA::Any & data
-                                          );
+  virtual CORBA::OctetSeq * encode_value (const CORBA::Any & data);
 
   /// Extract the value from the octet sequence, based on the given
   /// TypeCode,  and place it into an Any.
   virtual CORBA::Any * decode_value (const CORBA::OctetSeq & data,
-                                     CORBA::TypeCode_ptr tc
-                                     );
+                                     CORBA::TypeCode_ptr tc);
 
 protected:
 
@@ -93,8 +89,7 @@ protected:
    * that isn't supported for the version of GIOP associated with this
    * Codec.
    */
-  void check_type_for_encoding (const CORBA::Any & data
-                               );
+  void check_type_for_encoding (const CORBA::Any & data);
 
 private:
 
