@@ -38,8 +38,7 @@ public:
   /// Creates a Codec factory and returns it.
   virtual CORBA::Object_ptr create_object (CORBA::ORB_ptr orb,
                                            int argc,
-                                           ACE_TCHAR *argv []
-                                           );
+                                           ACE_TCHAR *argv []);
 
   /// Used to force the initialization of the ORB code.
   static int Initializer (void);
