@@ -52,12 +52,10 @@ public:
   TAO_CodecFactory (TAO_ORB_Core * orb_core);
 
   /// Create a Coder/Decoder for the given type of encoding.
-  virtual IOP::Codec_ptr create_codec (const IOP::Encoding & enc
-                                       );
+  virtual IOP::Codec_ptr create_codec (const IOP::Encoding & enc);
 
   /// Create a Coder/Decoder for the given type of encoding and codesets.
-  virtual IOP::Codec_ptr create_codec_with_codesets (const IOP::Encoding_1_2 & enc
-                                                     );
+  virtual IOP::Codec_ptr create_codec_with_codesets (const IOP::Encoding_1_2 & enc);
 
 private:
   /// Prevent copying through the copy constructor and the assignment
@@ -69,8 +67,7 @@ private:
                                  CORBA::Octet minor,
                                  IOP::EncodingFormat encoding_format,
                                  TAO_Codeset_Translator_Base * char_trans,
-                                 TAO_Codeset_Translator_Base * wchar_trans
-                                 );
+                                 TAO_Codeset_Translator_Base * wchar_trans);
 private:
 
   /// Pointer to the ORB Core.
